name:           snowdrop-dba-avlp
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/githubuser/blockchain-util#readme>
homepage:       https://github.com/githubuser/blockchain-util#readme
bug-reports:    https://github.com/githubuser/blockchain-util/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/githubuser/blockchain-util

library
  hs-source-dirs:
      src
  build-depends:
      AVL
    , containers
    , data-default
    , free
    , loot-log
    , snowdrop-core
    , snowdrop-dba
    , snowdrop-hetero
    , snowdrop-util
    , text-format
    , vinyl
    , universum
  build-tool-depends:
      autoexporter:autoexporter

  exposed-modules:
      Snowdrop.Dba.AVLp

  other-modules:
      Snowdrop.Dba.AVLp.Accum
      Snowdrop.Dba.AVLp.Actions
      Snowdrop.Dba.AVLp.Avl
      Snowdrop.Dba.AVLp.Constraints
      Snowdrop.Dba.AVLp.State

  default-language:    Haskell2010

  ghc-options:        -Wall
                      -fno-warn-orphans

  default-extensions: NoImplicitPrelude
                      ExplicitNamespaces
                      TypeApplications
                      LambdaCase
                      StandaloneDeriving
                      ConstraintKinds
                      MultiParamTypeClasses
                      TypeSynonymInstances
                      FlexibleInstances
                      FlexibleContexts
                      UndecidableInstances
                      GeneralizedNewtypeDeriving
                      OverloadedStrings
                      RecordWildCards
                      TypeOperators
                      ViewPatterns
                      TypeFamilies
                      GADTs
                      TupleSections
