name:           snowdrop-dba
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/githubuser/blockchain-util#readme>
homepage:       https://github.com/githubuser/blockchain-util#readme
bug-reports:    https://github.com/githubuser/blockchain-util/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/githubuser/blockchain-util

library
  hs-source-dirs:
      src
  build-depends:
      data-default
    , lens
    , formatting < 6.3
    , lifted-async
    , mtl
    , universum
    , snowdrop-core
    , snowdrop-hetero
    , snowdrop-util
    , text-format
    , vinyl
    , union
  build-tool-depends:
      autoexporter:autoexporter

  exposed-modules:
      Snowdrop.Dba.Base

  other-modules:
      Snowdrop.Dba.Base.DbActions
      Snowdrop.Dba.Base.DbActions.Types
      Snowdrop.Dba.Base.DbActions.Composite
      Snowdrop.Dba.Base.IOExecutor
      Snowdrop.Dba.Base.DefaultConf

  default-language:    Haskell2010

  ghc-options:        -Wall
                      -fno-warn-orphans

  default-extensions: NoImplicitPrelude
                      ExplicitNamespaces
                      RankNTypes
                      LambdaCase
                      RecordWildCards
                      ViewPatterns
                      TypeFamilies
                      FlexibleInstances
                      MultiParamTypeClasses
                      OverloadedStrings
                      TypeOperators
                      FlexibleContexts
                      UndecidableInstances
                      ConstraintKinds
                      ScopedTypeVariables
                      TemplateHaskell
                      StandaloneDeriving
                      TypeApplications
                      GeneralizedNewtypeDeriving
                      DeriveFunctor
                      TupleSections
