name:           snowdrop-hetero
version:        0.5
description:    Helpers for working with heterogeneous lists (structures taken from @Data.Vinyl@, @Data.Union@).
                .
                Part of Snowdrop library set.
homepage:       https://github.com/serokell/blockchain-util#readme
bug-reports:    https://github.com/serokell/blockchain-util/issues
author:         Serokell
maintainer:     Serokell <hi@serokell.io>
copyright:      2018 Serokell
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/serokell/blockchain-util

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , data-default
    , formatting < 6.3
    , fmt
    , hashable
    , snowdrop-util
    , text
    , text-format
    , vinyl
    , union
    , universum
  build-tool-depends:
      autoexporter:autoexporter

  exposed-modules:
      Snowdrop.Hetero

  other-modules:
      Snowdrop.Hetero.Constraints
      Snowdrop.Hetero.HMap

  default-language: Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
  default-extensions:   NoImplicitPrelude
                        ExplicitNamespaces
                        TypeOperators
                        TypeFamilies
                        UndecidableInstances
                        MultiParamTypeClasses
                        FlexibleInstances
                        ConstraintKinds
                        ExistentialQuantification
                        FlexibleContexts
                        DefaultSignatures
                        TypeApplications
                        ScopedTypeVariables
                        OverloadedStrings
