name:           snowdrop-mempool
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/githubuser/blockchain-util#readme>
homepage:       https://github.com/githubuser/blockchain-util#readme
bug-reports:    https://github.com/githubuser/blockchain-util/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/githubuser/blockchain-util

library
  hs-source-dirs:
      src
  build-depends:
      data-default
    , formatting < 6.3
    , lens
    , mtl
    , snowdrop-core
    , snowdrop-dba
    , snowdrop-hetero
    , snowdrop-util
    , vinyl
    , universum
  build-tool-depends:
      autoexporter:autoexporter

  exposed-modules:
      Snowdrop.Mempool

  other-modules:
      Snowdrop.Mempool.Core
      Snowdrop.Mempool.Logic

  default-language:    Haskell2010

  ghc-options:        -Wall
                      -fno-warn-orphans

  default-extensions: NoImplicitPrelude
                      TypeApplications
                      RecordWildCards
                      KindSignatures
                      FlexibleInstances
                      MultiParamTypeClasses
                      FlexibleContexts
                      UndecidableInstances
                      TypeFamilies
                      OverloadedStrings
                      ScopedTypeVariables
