name:           snowdrop-util
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/githubuser/blockchain-util#readme>
homepage:       https://github.com/githubuser/blockchain-util#readme
bug-reports:    https://github.com/githubuser/blockchain-util/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/githubuser/blockchain-util

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , ansi-terminal
    , containers
    , data-default
    , exceptions
      -- since 6.3 they use their own Buildable, contradicting with universum
    , formatting < 6.3
    , fmt
    , lens
    , log-warper
    , loot-base
    , loot-log
    , monad-control
    , mtl
    , text
    , text-format
    , template-haskell
    , transformers
    , transformers-base
    , universum >= 1.1.0
    , unordered-containers
    , vinyl
    , yaml
  build-tool-depends:
      autoexporter:autoexporter

  exposed-modules:
      Snowdrop.Util

  other-modules:
      Paths_snowdrop_util

      Snowdrop.Util.Containers
      Snowdrop.Util.Helpers
      Snowdrop.Util.Hetero
      Snowdrop.Util.Hetero.Constraints
      Snowdrop.Util.Lens
      Snowdrop.Util.Logging
      Snowdrop.Util.Prism
      Snowdrop.Util.Prism.Class
      Snowdrop.Util.Prism.Exception
      Snowdrop.Util.Prism.TH
      Snowdrop.Util.Text

  default-language: Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        TypeFamilies
                        GADTs
                        MonadFailDesugaring
                        TypeOperators
